--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.4",
     "@tanstack/react-query": "^5.51.9",
+    "@types/lodash": "^4.17.7",
     "axios": "^1.7.2",
+    "lodash": "^4.17.21",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
